testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag2.errors.txt
/a.js(1,15): error TS2315: Type 'Object' is not generic.


==== /a.js (1 errors) ====
    /** @typedef {Object.<string, (n: number) => boolean>} Predicates */
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
    
    const p = /** @satisfies {Predicates} */ ({
        isEven: n => n % 2 === 0,
        isOdd: n => n % 2 === 1
    });
    